# mican-exwall-4linux

./: .gitattributes  .gitignore  ARCHITECTURE.md  CANOPEN.md  LICENSE  MICONTROL_4_DUMMIES.md  README.md  pyproject.toml  requirements.txt
examples/: keep_totem_happy.py
mican_stick2/: __init__.py  bridge.py  cli.py  client.py  discovery.py  transport.py
scripts/: install.sh  install_service.sh  setup_vcan.sh
systemd/: mican-totem.service.in
tests/: test_cli.py  test_protocol.py
